@@ -1,3 +1,7 @@
+2006-03-09  Titus Brown  <t@issola.caltech.edu>
+
+	* Switched mechanize default encodings over to utf-8.
+
 2006-03-06  Titus Brown  <t@issola.caltech.edu>
 
 	* fixed twill.shell.main() so that -i flag makes interact run
